index.html modified

--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
             <a href="https://www.linkedin.com/in/akshat-pawar-732487226/" target="blank"><img src="https://www.pngkey.com/png/full/10-102671_linkedin-white-png-download-linkedin-icon-white-circle.png" alt="linkedin"></a><br>
         </div>
 
-        <div id="det1cont">
+        <div class="det1cont">
             <h1>Heading</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam eos magnam nisi aut mollitia placeat magni necessitatibus architecto molestiae aliquid quidem soluta iste vero id iure modi rerum ut, quas at fugit similique alias harum? Aliquid, vero dolorem. Molestiae nulla, deleniti commodi corrupti reiciendis architecto cum quo, amet hic saepe tempora optio sunt, accusantium ullam asperiores facilis odit eius sequi dolorum consequatur? At odit, error inventore recusandae similique quod animi itaque quos blanditiis, quisquam debitis deserunt. Eum quae corporis dolore, qui veniam dolores harum sapiente fuga, excepturi omnis saepe blanditiis ad. Sunt accusantium blanditiis officiis illo quo, perferendis dolorum consequatur.</p>
         </div>
     </div>
 
-    <div id="det2">
+    <div class="container">
 
     </div>
 
