--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="icon.ico">
 </head>
-<body>
+<body id="body_main">
     <header>
         <nav id="navbar">
             <div id="logodiv">
@@ -20,7 +20,7 @@
             <div id="menu">
                 <ul>
                     <li><a href="#" class="active">HOME</a></li>
-                    <li><a href="#">ABOUT</a></li>
+                    <li><a href="about.html">ABOUT</a></li>
                     <li><a href="#">PROJECTS</a></li>
                     <li><a href="#">ART</a></li>
                     <li><a href="#">CONTACT</a></li>
