--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
          </div>
  
          <div class="det1cont">
-             <h1 class="quote">"COMING SOON"</h1>
+             <h1 class="quote">"Coming soon"</h1>
          </div>
      </div>
     
