--- a/about.html
+++ b/about.html
@@ -21,9 +21,9 @@
                 <ul>
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="#" class="active">ABOUT</a></li>
-                    <li><a href="#">PROJECTS</a></li>
-                    <li><a href="#">ART</a></li>
-                    <li><a href="#">CONTACT</a></li>
+                    <li><a href="projects.html">PROJECTS</a></li>
+                    <li><a href="art.html">ART</a></li>
+                    <li><a href="contact.html">CONTACT</a></li>
                 </ul>
             </div>
         </nav>
