--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Corinthia&family=Dongle&family=Major+Mono+Display&family=Spartan:wght@600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Corinthia&family=Dongle&family=Major+Mono+Display&family=Merienda:wght@700&family=Satisfy&family=Spartan:wght@600&display=swap" rel="stylesheet">
     <title>Akshat</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="icon.ico">
@@ -14,11 +14,11 @@
 <body id="body_about">
     <header>
         <nav id="navbar">
-            <div id="logodiv">
-                <a id="logo" href="#">AKSHAT</a>
-            </div>
+            <!-- <div id="logodiv">
+                <a id="logo" href="index.html">AKSHAT PAWAR</a>
+            </div> -->
             <div id="menu">
-                <ul>
+                <ul >
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="#" class="active">ABOUT</a></li>
                     <li><a href="projects.html">PROJECTS</a></li>
@@ -30,15 +30,16 @@
         <!-- <hr> -->
     </header>
 
-    <div id="det1">
-        <div id="links">
-             <a href="https://twitter.com/akshat19p"  target="blank"><img src="https://www.pngkit.com/png/full/283-2833373_twitter-icon-transparent-background-twitter-logo-white-circle.png" alt="twitter"></a><br>
-             <a href="https://github.com/akshatpawar" target="blank"><img src="data/icons/github.png" alt="github"></a><br>
-             <a href="https://www.linkedin.com/in/akshat-pawar-732487226/" target="blank"><img src="https://www.pngkey.com/png/full/10-102671_linkedin-white-png-download-linkedin-icon-white-circle.png" alt="linkedin"></a><br>
+    <div id="det1_about">
+        <div id="pfp_d">
+             <img id="pfp" src="data/about/pfp.png" alt="About.png">
          </div>
  
-         <div class="det1cont">
-             <h1 class="quote">"Coming soon"</h1>
+         <div class="about" id="about1">
+             <h1 class="name">Akshat Pawar</h1>
+             <p class="about_i">I am currently pursuing an undergraduate degree in Computer Science and Engineering at SRM University. <br><br>
+            I am currently learning web development and want to learn app development as well. In addition to this I also have a good knowledge in photoshop and also quite good in video editing and drawing. <br><br>
+            I've won many prizes for presentation, photo editing, game making (Kodu, scratch) competitions in school level. I'm also good in drawing.</p>
          </div>
      </div>
     
