--- a/art.html
+++ b/art.html
@@ -6,17 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Corinthia&family=Dongle&family=Major+Mono+Display&family=Spartan:wght@600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Corinthia&family=Dongle&family=Major+Mono+Display&family=Merienda:wght@700&family=Satisfy&family=Spartan:wght@600&display=swap" rel="stylesheet">
     <title>Akshat</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="icon.ico">
 </head>
-<body id="body_about">
+<body id="body_art">
     <header>
         <nav id="navbar">
-            <div id="logodiv">
-                <a id="logo" href="#">AKSHAT</a>
-            </div>
+            <!-- <div id="logodiv">
+                <a id="logo" href="index.html">AKSHAT PAWAR</a>
+            </div> -->
             <div id="menu">
                 <ul>
                     <li><a href="index.html">HOME</a></li>
@@ -30,15 +30,29 @@
         <!-- <hr> -->
     </header>
 
-    <div id="det1">
+    <div id="det1_art">
         <div id="links">
-             <a href="https://twitter.com/akshat19p"  target="blank"><img src="https://www.pngkit.com/png/full/283-2833373_twitter-icon-transparent-background-twitter-logo-white-circle.png" alt="twitter"></a><br>
-             <a href="https://github.com/akshatpawar" target="blank"><img src="data/icons/github.png" alt="github"></a><br>
-             <a href="https://www.linkedin.com/in/akshat-pawar-732487226/" target="blank"><img src="https://www.pngkey.com/png/full/10-102671_linkedin-white-png-download-linkedin-icon-white-circle.png" alt="linkedin"></a><br>
+             <a href="https://twitter.com/akshat19p"  target="blank"><img src="https://www.pngkit.com/png/full/283-2833373_twitter-icon-transparent-background-twitter-logo-white-circle.png" class="icon" alt="twitter"></a><br>
+             <a href="https://github.com/akshatpawar" target="blank"><img src="data/icons/github.png" class="icon" alt="github"></a><br>
+             <a href="https://www.linkedin.com/in/akshat-pawar-732487226/" target="blank"><img src="https://www.pngkey.com/png/full/10-102671_linkedin-white-png-download-linkedin-icon-white-circle.png" class="icon" alt="linkedin"></a><br>
          </div>
  
          <div class="det1cont">
-             <h1 class="quote">"Coming soon"</h1>
+             <h1 class="art_head">"ART"</h1>
+             <p class="details1">These are some drawings I made in my free time.</p>
+         </div>
+     </div>
+
+     <div id="det2_art">
+         <div class="ichigo">
+             <img src="data/art/ichigo.jpg" class="ichigo_img" alt="ichigo.jpg">
+         </div>
+
+         <div id="o_arts">
+             <img src="data/art/art1.jpg" alt="art1.jpg" class="artss">
+             <img src="data/art/art2.jpg" alt="art2.jpg" class="artss">
+             <img src="data/art/art3.jpg" alt="art3.jpg" class="artss">
+             <img src="data/art/art4.jpg" alt="art4.jpg" class="artss">
          </div>
      </div>
     
