--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Corinthia&family=Dongle&family=Major+Mono+Display&family=Spartan:wght@600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Corinthia&family=Dongle&family=Major+Mono+Display&family=Merienda:wght@700&family=Satisfy&family=Spartan:wght@600&display=swap" rel="stylesheet">
     <title>Akshat</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="icon.ico">
@@ -14,9 +14,9 @@
 <body id="body_about">
     <header>
         <nav id="navbar">
-            <div id="logodiv">
-                <a id="logo" href="#">AKSHAT</a>
-            </div>
+            <!-- <div id="logodiv">
+                <a id="logo" href="index.html">AKSHAT PAWAR</a>
+            </div> -->
             <div id="menu">
                 <ul>
                     <li><a href="index.html">HOME</a></li>
@@ -32,13 +32,13 @@
 
     <div id="det1">
         <div id="links">
-             <a href="https://twitter.com/akshat19p"  target="blank"><img src="https://www.pngkit.com/png/full/283-2833373_twitter-icon-transparent-background-twitter-logo-white-circle.png" alt="twitter"></a><br>
-             <a href="https://github.com/akshatpawar" target="blank"><img src="data/icons/github.png" alt="github"></a><br>
-             <a href="https://www.linkedin.com/in/akshat-pawar-732487226/" target="blank"><img src="https://www.pngkey.com/png/full/10-102671_linkedin-white-png-download-linkedin-icon-white-circle.png" alt="linkedin"></a><br>
+             <a href="https://twitter.com/akshat19p"  target="blank"><img src="https://www.pngkit.com/png/full/283-2833373_twitter-icon-transparent-background-twitter-logo-white-circle.png" class="icon" alt="twitter"></a><br>
+             <a href="https://github.com/akshatpawar" target="blank"><img src="data/icons/github.png" class="icon" alt="github"></a><br>
+             <a href="https://www.linkedin.com/in/akshat-pawar-732487226/" target="blank"><img src="https://www.pngkey.com/png/full/10-102671_linkedin-white-png-download-linkedin-icon-white-circle.png" class="icon" alt="linkedin"></a><br>
          </div>
  
          <div class="det1cont">
-             <h1 class="quote">"Coming soon"</h1>
+             <h1 class="quote">"Coming soon, check github for now."</h1>
          </div>
      </div>
     
