--- a/index.html
+++ b/index.html
@@ -6,24 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Corinthia&family=Dongle&family=Major+Mono+Display&family=Spartan:wght@600&display=swap" rel="stylesheet">
-    <title>Akshat</title>
+    <link href="https://fonts.googleapis.com/css2?family=Arima+Madurai:wght@500&family=Bebas+Neue&family=Corinthia&family=Dongle&family=Major+Mono+Display&family=Merienda:wght@700&family=Satisfy&family=Spartan:wght@600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="icon.ico">
 </head>
 <body id="body_main">
     <header>
         <nav id="navbar">
-            <div id="logodiv">
-                <a id="logo" href="#">AKSHAT</a>
-            </div>
+            <!-- <div id="logodiv">
+                <a id="logo" href="index.html">AKSHAT PAWAR</a>
+            </div> -->
             <div id="menu">
                 <ul>
                     <li><a href="#" class="active">HOME</a></li>
                     <li><a href="about.html">ABOUT</a></li>
-                    <li><a href="#">PROJECTS</a></li>
-                    <li><a href="#">ART</a></li>
-                    <li><a href="#">CONTACT</a></li>
+                    <li><a href="projects.html">PROJECTS</a></li>
+                    <li><a href="art.html">ART</a></li>
+                    <li><a href="contact.html">CONTACT</a></li>
                 </ul>
             </div>
         </nav>
@@ -32,9 +31,9 @@
 
     <div id="det1">
        <div id="links">
-            <a href="https://twitter.com/akshat19p"  target="blank"><img src="https://www.pngkit.com/png/full/283-2833373_twitter-icon-transparent-background-twitter-logo-white-circle.png" alt="twitter"></a><br>
-            <a href="https://github.com/akshatpawar" target="blank"><img src="data/icons/github.png" alt="github"></a><br>
-            <a href="https://www.linkedin.com/in/akshat-pawar-732487226/" target="blank"><img src="https://www.pngkey.com/png/full/10-102671_linkedin-white-png-download-linkedin-icon-white-circle.png" alt="linkedin"></a><br>
+            <a href="https://twitter.com/akshat19p"  target="blank"><img src="https://www.pngkit.com/png/full/283-2833373_twitter-icon-transparent-background-twitter-logo-white-circle.png" class="icon" alt="twitter"></a><br>
+            <a href="https://github.com/akshatpawar" target="blank"><img src="data/icons/github.png" class="icon" alt="github"></a><br>
+            <a href="https://www.linkedin.com/in/akshat-pawar-732487226/" target="blank"><img src="https://www.pngkey.com/png/full/10-102671_linkedin-white-png-download-linkedin-icon-white-circle.png" class="icon" alt="linkedin"></a><br>
         </div>
 
         <div class="det1cont">
@@ -42,15 +41,15 @@
         </div>
     </div>
 
-    <div class="container">
+    <!-- <div class="container">
         <div class="det2cont">
             <h1 class="det2head">
                 <b class="cursive"> Art &nbsp; &</b>
                 <b class="codehead">pRogRAmMinG</b>
             </h1>
-            <p>Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal </p>
+            <p class="home_info">Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal Mundal </p>
         </div>
-    </div>
+    </div> -->
 
 </body>
 </html>
