--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
 
     <div id="det1_about">
         <div id="pfp_d">
-             <img id="pfp" src="data/about/pfp.png" alt="About.png">
+             <img id="pfp" src="data/about/pfp1.png" alt="About.png">
          </div>
  
          <div class="about" id="about1">
