--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Corinthia&family=Dongle&family=Major+Mono+Display&family=Merienda:wght@700&family=Satisfy&family=Spartan:wght@600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Arima+Madurai:wght@500&family=Bebas+Neue&family=Corinthia&family=Dongle&family=Major+Mono+Display&family=Merienda:wght@700&family=Satisfy&family=Spartan:wght@600&family=Ubuntu&family=Ubuntu+Condensed&display=swap" rel="stylesheet">
     <title>About</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="icon.ico">
