--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Corinthia&family=Dongle&family=Major+Mono+Display&family=Merienda:wght@700&family=Satisfy&family=Spartan:wght@600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Arima+Madurai:wght@500&family=Bebas+Neue&family=Corinthia&family=Dongle&family=Major+Mono+Display&family=Merienda:wght@700&family=Satisfy&family=Spartan:wght@600&family=Ubuntu&family=Ubuntu+Condensed&display=swap" rel="stylesheet">
     <title>Projects</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="icon.ico">
@@ -30,17 +30,34 @@
         <!-- <hr> -->
     </header>
 
-    <div id="det1">
+    <div id="det1_proj">
         <div id="links">
              <a href="https://twitter.com/akshat19p"  target="blank"><img src="https://www.pngkit.com/png/full/283-2833373_twitter-icon-transparent-background-twitter-logo-white-circle.png" class="icon" alt="twitter"></a><br>
              <a href="https://github.com/akshatpawar" target="blank"><img src="data/icons/github.png" class="icon" alt="github"></a><br>
              <a href="https://www.linkedin.com/in/akshat-pawar-732487226/" target="blank"><img src="https://www.pngkey.com/png/full/10-102671_linkedin-white-png-download-linkedin-icon-white-circle.png" class="icon" alt="linkedin"></a><br>
-         </div>
+        </div>
  
-         <div class="det1cont">
-             <h1 class="quote">"Coming soon, check github for now."</h1>
-         </div>
-     </div>
-    
+        <div class="det1cont">
+            <h1 class="quote" id="quote_p">"It's better to do less than you hoped than nothing at all."</h1>
+            <p id="p_byline">- James Clear, Atomic Habits</p>
+        </div>
+    </div>
+
+    <div id="cont_proj">
+        <div class="det_proj">
+            <a href="https://akshatpawar.github.io/valorant-info/"  target="blank">
+                <h1 class="proj_head">Valorant Information Website</h1>
+            </a>
+            <a href="https://akshatpawar.github.io/valorant-info/"  target="blank">
+                <img src="data/projects/1. valo/valo.png" class="proj_ss" alt="valo_ss.png">
+            </a>
+            <h2 class="proj_info">
+                &ltcc;&nbsp;This is a website I created to test my CSS skills. <br>
+                &ltcc;&nbsp;It is not completed yet. <br>
+                &ltcc;&nbsp;Only landing page and Brimstone ("Agents > Controllers > Brimstone" from Navbar) are completed till now.
+            </h2>
+        </div>
+    </div>
+
 </body>
 </html>
