--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Arima+Madurai:wght@500&family=Bebas+Neue&family=Corinthia&family=Dongle&family=Major+Mono+Display&family=Merienda:wght@700&family=Satisfy&family=Spartan:wght@600&family=Ubuntu&family=Ubuntu+Condensed&display=swap" rel="stylesheet">
     <title>Akshat</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="image_src" href="data/header2.png" />
     <link rel="icon" type="image/x-icon" href="icon.ico">
 </head>
 <body id="body_main">
