--- a/projects.html
+++ b/projects.html
@@ -54,7 +54,7 @@
             <h2 class="proj_info">
                 &ltcc;&nbsp;This is a website I created to test my CSS skills. <br>
                 &ltcc;&nbsp;It is not completed yet. <br>
-                &ltcc;&nbsp;Only landing page and Brimstone ("Agents > Controllers > Brimstone" from Navbar) are completed till now.
+                &ltcc;&nbsp;Only the landing page and first agent of each category (Eg: "Agents > Controllers > Brimstone" from Navbar) are completed till now.
             </h2>
         </div>
     </div>
