--- a/about.html
+++ b/about.html
@@ -42,6 +42,31 @@
             I've won many prizes for presentation, photo editing, game making (Kodu, scratch) competitions in school level. I'm also good in drawing.</p>
          </div>
      </div>
+
+     <div id="det2_about">
+         <!-- <img src="data/about/Trophy.png" id="trophy" alt="Achievements.png"> -->
+         <h1 class="skills_head">Skills</h1>
+     </div>
+
+     <div id="det3_about">
+         <div class="skill_box">
+            <h2 class="skill_title">
+                Photo Editing
+            </h2>
+         </div>
+
+         <div class="skill_box">
+            <h2 class="skill_title">
+                Video Editing
+            </h2>
+         </div>
+
+         <div class="skill_box">
+            <h2 class="skill_title">
+                Web Development
+            </h2>
+         </div>
+     </div>
     
 </body>
 </html>
