--- a/projects.html
+++ b/projects.html
@@ -32,9 +32,9 @@
 
     <div id="det1_proj">
         <div id="links">
-             <a href="https://twitter.com/akshat19p"  target="blank"><img src="https://www.pngkit.com/png/full/283-2833373_twitter-icon-transparent-background-twitter-logo-white-circle.png" class="icon" alt="twitter"></a><br>
-             <a href="https://github.com/akshatpawar" target="blank"><img src="data/icons/github.png" class="icon" alt="github"></a><br>
-             <a href="https://www.linkedin.com/in/akshat-pawar-732487226/" target="blank"><img src="https://www.pngkey.com/png/full/10-102671_linkedin-white-png-download-linkedin-icon-white-circle.png" class="icon" alt="linkedin"></a><br>
+            <a href="https://twitter.com/akshat19p"  target="blank"><img src="data/icons/twitter.png" class="icon" alt="twitter"></a><br>
+            <a href="https://github.com/akshatpawar" target="blank"><img src="data/icons/github.png" class="icon" alt="github"></a><br>
+            <a href="https://www.linkedin.com/in/akshat-pawar-732487226/" target="blank"><img src="data/icons/linkedin.png" class="icon" alt="linkedin"></a><br>
         </div>
  
         <div class="det1cont">
