--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
 
         <div class="det1cont">
-            <h1 class="quote">"Every Professional Was Once An Ameteur."</h1>
+            <h1 class="quote">"Every Professional Was Once An Amateur."</h1>
         </div>
     </div>
 
