--- a/projects.html
+++ b/projects.html
@@ -49,7 +49,7 @@
                 <h1 class="proj_head">Valorant Information Website</h1>
             </a>
             <a href="https://akshatpawar.github.io/valorant-info/"  target="blank">
-                <img src="https://i.imgur.com/bq2z5Sx.png" class="proj_ss" alt="data/projects/1. valo/valo.png">
+                <img src="data/projects/1. valo/valo.png" class="proj_ss" alt="valo_ss.png">
             </a>
             <h2 class="proj_info">
                 &ltcc;&nbsp;This is a website I created to test my CSS skills. <br>
