--- a/art.html
+++ b/art.html
@@ -45,14 +45,14 @@
 
      <div id="det2_art">
          <div class="ichigo">
-             <img src="https://i.imgur.com/jgP5qX1.jpg" class="ichigo_img" alt="ichigo.jpg">
+             <img src="data/art/ichigo.jpg" class="ichigo_img" alt="ichigo.jpg">
          </div>
 
          <div id="o_arts">
-             <img src="https://i.imgur.com/KeR5Tli.jpg" alt="art1.jpg" class="artss">
-             <img src="https://i.imgur.com/KOqskp1.jpg" alt="art2.jpg" class="artss">
-             <img src="https://i.imgur.com/6w5O4zw.jpg" alt="art3.jpg" class="artss">
-             <img src="https://i.imgur.com/e97NfBp.jpg" alt="art4.jpg" class="artss">
+             <img src="data/art/art1.jpg" alt="art1.jpg" class="artss">
+             <img src="data/art/art2.jpg" alt="art2.jpg" class="artss">
+             <img src="data/art/art3.jpg" alt="art3.jpg" class="artss">
+             <img src="data/art/art4.jpg" alt="art4.jpg" class="artss">
          </div>
      </div>
     
