--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
                     <li><a href="about.html">ABOUT</a></li>
                     <li><a href="projects.html">PROJECTS</a></li>
                     <li><a href="art.html">ART</a></li>
-                    <li><a href="contact.html" class="active">CONTACT</a></li>
+                    <li><a href="#" class="active">CONTACT</a></li>
                 </ul>
             </div>
         </nav>
@@ -36,6 +36,26 @@
         <img id="pfp_links" src="data/about/pfp2.jpg" alt="About.png">
         <h1 class="quote">Akshat</h1>
         <p class="about_links">Connect with me through these platforms.</p>
+        <a href="https://www.instagram.com/akshatpawar_" class="link_in" target="blank">
+            <div class="link_box">
+                <i class="fab fa-instagram-square fa-3x"></i>
+                <h2 class="link_txt">Instagram</h2>
+            </div>
+        </a>
+        </a>
+        <a href="https://www.snapchat.com/add/imrocker.akshat" class="link_in" target="blank">
+            <div class="link_box">
+                <i class="fab fa-snapchat-square fa-3x"></i>
+                <h2 class="link_txt">Snapchat</h2>
+            </div>
+        </a>
+        </a>
+        <a href="http://bit.do/spartan_d" class="link_in" target="blank">
+            <div class="link_box">
+                <i class="fab fa-discord fa-2x"></i>
+                <h2 class="link_txt">Discord</h2>
+            </div>
+        </a>
         <a href="https://www.linkedin.com/in/akshat-pawar-732487226/" class="link_in" target="blank">
             <div class="link_box">
                 <i class="fab fa-linkedin fa-3x"></i>
@@ -48,19 +68,19 @@
                 <h2 class="link_txt">Github</h2>
             </div>
         </a>
+        <a href="https://myanimelist.net/profile/akshatpawar" class="link_in" target="blank">
+            <div class="link_box">
+                <img src="data/contact/mal.png" alt="" id="mal_icon">
+                <h2 class="link_txt">MyAnimeList</h2>
+            </div>
+        </a>
         <a href="https://twitter.com/akshat19p" class="link_in" target="blank">
             <div class="link_box">
                 <i class="fab fa-twitter-square fa-3x"></i>
                 <h2 class="link_txt">Twitter</h2>
             </div>
         </a>
-        <a href="https://www.instagram.com/akshatpawar_" class="link_in" target="blank">
-            <div class="link_box">
-                <i class="fab fa-instagram-square fa-3x"></i>
-                <h2 class="link_txt">Instagram</h2>
-            </div>
-        </a>
-        
+    
     </div>
 </body>
 </html>
